syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kody.grpc";
//option java_outer_classname = "SuperHeroProto";

package superhero;


service SuperHeroService {

  rpc SearchHero (SearchHeroRequest) returns (SearchHeroResponse) {}


  rpc SubscribeUpdates (SubscribeRequest) returns (stream SearchHeroResponse);
}


message SearchHeroRequest {
  string name = 1;
}


message SearchHeroResponse {
  string response = 1;
  repeated Hero results = 2;
}


message Hero {
  string id = 1;
  string name = 2;
  PowerStats powerStats = 3;
  Biography biography = 4;
  Appearance appearance = 5;
}


message PowerStats {
  string intelligence = 1;
  string strength = 2;
  string speed = 3;
  string durability = 4;
  string power = 5;
  string combat = 6;
}


message Biography {
  string fullName = 1;
  string alterEgos = 2;
  repeated string aliases = 3;
  string placeOfBirth = 4;
  string firstAppearance = 5;
  string publisher = 6;
  string alignment = 7;
}


message Appearance {
  string gender = 1;
  string race = 2;
  repeated string height = 3;
  repeated string weight = 4;
  string eyeColor = 5;
  string hairColor = 6;
}



message SubscribeRequest {
  string keyword = 1; // 可选，客户端想监听哪个 keyword（我们现在用不到，但可扩展）
}

